--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="EternaVerseApp Browser Game" />
+    <meta name="author" content="Taha Khamessi" />
+    <meta name="keywords" content="EternaVerse, App, Web Application" />
+    <title>EternaVerseApp</title>
   </head>
   <body>
     <div id="root"></div>
